--- a/src/Authentication-Api/Authentication.Api/appsettings.Development.json
+++ b/src/Authentication-Api/Authentication.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "MySqlConnection": "Server=localhost;port=3306;Database=authentication-api;Uid=root;Pwd=;;SslMode=none"
+    "OracleConnection": "User Id=AUTH_IDENTITY;Password=auth123;Data Source=//localhost:1521/FREEPDB1"
   },
   "Identity": {
     "Secret": "7008efe8c7d984f0389bc5e99f5194f8",
