--- a/src/Authentication-Api/Authentication.Api/Authentication.Api.csproj
+++ b/src/Authentication-Api/Authentication.Api/Authentication.Api.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Caelum.Stella.CSharp" Version="1.4.7" />
     <PackageReference Include="FluentValidation" Version="11.9.2" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.2" />
     <PackageReference Include="Microsoft.AspNetCore.ResponseCompression" Version="2.1.21" />
