--- a/src/Authentication-Api/Authentication.Api/Authentication.Api.csproj
+++ b/src/Authentication-Api/Authentication.Api/Authentication.Api.csproj
@@ -65,9 +65,12 @@
     <DocumentationFile>Documentation\Authentication.Api.xml</DocumentationFile>
   </PropertyGroup>
 
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="'$(Configuration)'=='Debug'">
     <Exec Command="dotnet tool restore" />
-    <Exec Command="dotnet swagger tofile --output Documentation\/Swagger\/Definition\/swagger.json $(OutputPath)\/$(AssemblyName).dll v1" WorkingDirectory="$(ProjectDir)" />
+    <Exec
+      Command="dotnet swagger tofile --output Documentation/Swagger/Definition/swagger.json $(OutputPath)/$(AssemblyName).dll v1"
+      WorkingDirectory="$(ProjectDir)"
+      EnvironmentVariables="ASPNETCORE_ENVIRONMENT=Development;DOTNET_ENVIRONMENT=Development" />
   </Target>
 
 </Project>
