Account-api - Corrige o Dockerfile

--- a/src/Account-Api/Account.Api/Dockerfile
+++ b/src/Account-Api/Account.Api/Dockerfile
@@ -1,25 +1,25 @@
 # Etapa de execução base
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
 # Etapa de build
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
 # Copia os arquivos de projeto e restaura dependências
-COPY ["src/Account-api/Account.Api/Account.Api.csproj", "Account.Api/"]
-COPY ["src/Account-api/Account.Application/Account.Application.csproj", "Account.Application/"]
-COPY ["src/Account-api/Account.Domain/Account.Domain.csproj", "Account.Domain/"]
-COPY ["src/Account-api/Account.Infrastructure/Account.Infrastructure.csproj", "Account.Infrastructure/"]
-COPY ["src/Account-api/Account.Infrastructure.CrossCutting/Account.Infrastructure.CrossCutting.csproj", "Account.Infrastructure.CrossCutting/"]
+COPY ["src/Account-Api/Account.Api/Account.Api.csproj", "Account.Api/"]
+COPY ["src/Account-Api/Account.Application/Account.Application.csproj", "Account.Application/"]
+COPY ["src/Account-Api/Account.Core/Account.Core.csproj", "Account.Core/"]
+COPY ["src/Account-Api/Account.Infrastructure/Account.Infrastructure.csproj", "Account.Infrastructure/"]
+COPY ["src/Account-Api/Account.Infrastructure.CrossCutting/Account.Infrastructure.CrossCutting.csproj", "Account.Infrastructure.CrossCutting/"]
 
 # Restaura as dependências
 RUN dotnet restore "Account.Api/Account.Api.csproj"
 
 # Copia todo o conteúdo do diretório src para o contêiner
-COPY src/Account-api/ .
+COPY src/Account-Api/ .
 
 # Define o diretório de trabalho como o projeto principal
 WORKDIR /src/Account.Api
