Account-api - Configura a autenticação e autorização para validar o token por JWKS

--- a/src/Account-Api/Account.Api/appsettings.Production.json
+++ b/src/Account-Api/Account.Api/appsettings.Production.json
@@ -7,5 +7,9 @@
   },
   "ConnectionStrings": {
     "OracleConnection": "User Id=ACCOUNT_BANK;Password=auth123;Data Source=//host.docker.internal:1521/FREEPDB1"
+  },
+  "Identity": {
+    "Authority": "https://authentication.api:5001",
+    "ValidOn": "https://localhost"
   }
 }
