--- a/src/Account-Api/Account.Api/appsettings.Development.json
+++ b/src/Account-Api/Account.Api/appsettings.Development.json
@@ -7,5 +7,9 @@
   },
   "ConnectionStrings": {
     "OracleConnection": "User Id=ACCOUNT_BANK;Password=auth123;Data Source=//localhost:1521/FREEPDB1"
+  },
+  "Identity": {
+    "Authority": "https://localhost:7267",
+    "ValidOn": "https://localhost"
   }
 }
