Account-api - Cria os endpoints para criar uma conta corrente e desativar uma conta corrente

--- a/src/Account-Api/Account.Core/Account.Core.csproj
+++ b/src/Account-Api/Account.Core/Account.Core.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Account.Infrastructure.CrossCutting\Account.Infrastructure.CrossCutting.csproj" />
+  </ItemGroup>
+
 </Project>
