--- a/src/Account-Api/Account.Api/Account.Api.csproj
+++ b/src/Account-Api/Account.Api/Account.Api.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Account.Application\Account.Application.csproj" />
     <ProjectReference Include="..\Account.Infrastructure.CrossCutting\Account.Infrastructure.CrossCutting.csproj" />
     <ProjectReference Include="..\Account.Infrastructure\Account.Infrastructure.csproj" />
   </ItemGroup>
