--- a/src/Account-Api/Account.Application/Account.Application.csproj
+++ b/src/Account-Api/Account.Application/Account.Application.csproj
@@ -5,8 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Caelum.Stella.CSharp" Version="1.4.7" />
     <PackageReference Include="FluentValidation" Version="11.9.2" />
     <PackageReference Include="MediatR" Version="12.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Account.Core\Account.Core.csproj" />
   </ItemGroup>
 
 </Project>
