--- a/src/Transfer-Api/Transfer.Application/Transfer.Application.csproj
+++ b/src/Transfer-Api/Transfer.Application/Transfer.Application.csproj
@@ -2,8 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="MediatR" Version="12.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Transfer.Core\Transfer.Core.csproj" />
+  </ItemGroup>
 
 </Project>
