--- a/src/Transfer-Api/Transfer.Core/Transfer.Core.csproj
+++ b/src/Transfer-Api/Transfer.Core/Transfer.Core.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Transfer.Infrastructure.CrossCutting\Transfer.Infrastructure.CrossCutting.csproj" />
+  </ItemGroup>
+
 </Project>
