Transfer-api - Cria a base para o endpoint de transferências

--- a/src/Transfer-Api/Transfer.Api/Transfer.Api.csproj
+++ b/src/Transfer-Api/Transfer.Api/Transfer.Api.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Transfer.Application\Transfer.Application.csproj" />
     <ProjectReference Include="..\Transfer.Infrastructure.CrossCutting\Transfer.Infrastructure.CrossCutting.csproj" />
     <ProjectReference Include="..\Transfer.Infrastructure\Transfer.Infrastructure.csproj" />
   </ItemGroup>
