Account-api - Ajusta as regras para acessar no container docker

--- a/src/Account-Api/Account.Api/appsettings.Production.json
+++ b/src/Account-Api/Account.Api/appsettings.Production.json
@@ -2,14 +2,17 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.Authentication": "Debug",
+      "Microsoft.IdentityModel": "Debug",
+      "Microsoft.IdentityModel.Protocols": "Debug"
     }
   },
   "ConnectionStrings": {
-    "OracleConnection": "User Id=ACCOUNT_BANK;Password=auth123;Data Source=//host.docker.internal:1521/FREEPDB1"
+    "OracleConnection": "User Id=ACCOUNT_BANK;Password=auth123;Data Source=//bankmore.oracle:1521/FREEPDB1"
   },
   "Identity": {
-    "Authority": "https://authentication.api:5001",
-    "ValidOn": "https://localhost"
+    "Authority": "http://authentication.api",
+    "ValidOn": "http://localhost"
   }
 }
