Transfer-api - Cria a configuração para chamadas http com política de retentativa e circuit breaker

--- a/src/Transfer-Api/Transfer.Application/Transfer.Application.csproj
+++ b/src/Transfer-Api/Transfer.Application/Transfer.Application.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Transfer.Core\Transfer.Core.csproj" />
+    <ProjectReference Include="..\Transfer.Infrastructure\Transfer.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
