Transfer-api - Configura o repositório e a estrutura para orquestração das regras de transferências

--- a/src/Transfer-Api/Transfer.Api/appsettings.Production.json
+++ b/src/Transfer-Api/Transfer.Api/appsettings.Production.json
@@ -9,7 +9,22 @@
     "OracleConnection": "User Id=TRANSFER_BANK;Password=auth123;Data Source=//host.docker.internal:1521/FREEPDB1"
   },
   "Identity": {
-    "Authority": "https://authentication.api:5001",
+    "Authority": "http://authentication.api",
     "ValidOn": "https://localhost"
+  },
+  {
+    "Integrations": {
+      "AccountApi": {
+        "BaseUrl": "http://account-api",
+        "TimeoutSeconds": 30,
+        "RetryCount": 3,
+        "RetryBaseDelayMs": 200,
+        "CircuitBreakerEnabled": true,
+        "BreakDurationSeconds": 30,
+        "FailureRatio": 0.5,
+        "MinimumThroughput": 20,
+        "SamplingDurationSeconds": 30
+      }
+    }
   }
 }
