Account-api - Cria os endpoints para obter as informações da conta corrente e melhora as configurações para autenticação/autorização

--- a/src/Account-Api/Account.Api/appsettings.Production.json
+++ b/src/Account-Api/Account.Api/appsettings.Production.json
@@ -3,9 +3,10 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.AspNetCore.Authentication": "Debug",
-      "Microsoft.IdentityModel": "Debug",
-      "Microsoft.IdentityModel.Protocols": "Debug"
+      "Microsoft.AspNetCore.Authentication": "Warning",
+      "Microsoft.AspNetCore.Authentication.JwtBearer": "Warning",
+      "Microsoft.IdentityModel": "Warning",
+      "Microsoft.IdentityModel.Protocols": "Warning"
     }
   },
   "ConnectionStrings": {
