Transfer-api - Ajusta a configuração da validação dos tokens JWT

--- a/src/Transfer-Api/Transfer.Api/appsettings.Development.json
+++ b/src/Transfer-Api/Transfer.Api/appsettings.Development.json
@@ -14,11 +14,11 @@
   },
   "Integrations": {
     "AccountApi": {
-      "BaseUrl": "http://account-api",
+      "BaseUrl": "https://localhost:7085",
       "TimeoutSeconds": 30,
       "RetryCount": 3,
       "RetryBaseDelayMs": 200,
-      "CircuitBreakerEnabled": true,
+      "CircuitBreakerEnabled": false,
       "BreakDurationSeconds": 30,
       "FailureRatio": 0.5,
       "MinimumThroughput": 20,
