--- a/src/Transfer-Api/Transfer.Api/appsettings.Production.json
+++ b/src/Transfer-Api/Transfer.Api/appsettings.Production.json
@@ -2,7 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.Authentication": "Warning",
+      "Microsoft.AspNetCore.Authentication.JwtBearer": "Warning",
+      "Microsoft.IdentityModel": "Warning",
+      "Microsoft.IdentityModel.Protocols": "Warning"
     }
   },
   "ConnectionStrings": {
@@ -10,7 +14,7 @@
   },
   "Identity": {
     "Authority": "http://authentication.api",
-    "ValidOn": "https://localhost"
+    "ValidOn": "http://localhost"
   },
   "Integrations": {
     "AccountApi": {
